--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
     "expo-image-picker": "^12.0.2",
-    "expo-location": "^14.0.2",
+    "expo-location": "~14.0.1",
     "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^7.9.0",
